# dogdetect

./: .cookiecutter.json  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/dogdetect/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
