[tool.poetry]
name = "dogdetect"
version = "1.0.0"
description = "Dogdetect"
authors = ["Espen Fjellvær Olsen <espen@mrfjo.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/espenfjo/dogdetect"
repository = "https://github.com/espenfjo/dogdetect"
documentation = "https://dogdetect.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/espenfjo/dogdetect/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.1"
av = "^8.0.3"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
numpy = "^1.21.2"
alabaster = "^0.7.12"
appdirs = "^1.4.4"
"aspy.refactor-imports" = "^2.2.0"
attrs = "^21.2.0"
Babel = "^2.9.1"
"backports.entry-points-selectable" = "^1.1.0"
bandit = "^1.7.0"
cached-property = "^1.5.2"
certifi = "^2021.5.30"
cfgv = "^3.3.1"
charset-normalizer = "^2.0.6"
colorama = "^0.4.4"
coverage = "^5.5"
darglint = "^1.8.0"
distlib = "^0.3.3"
dparse = "^0.5.1"
filelock = "^3.1.0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.1"
flake8-docstrings = "^1.6.0"
flake8-polyfill = "^1.0.2"
flake8-rst-docstrings = "^0.2.3"
future = "^0.18.2"
gitdb = "^4.0.7"
GitPython = "^3.1.24"
identify = "^2.2.15"
idna = "^3.2"
imagesize = "^1.2.0"
iniconfig = "^1.1.1"
Jinja2 = "^3.0.1"
livereload = "^2.6.3"
MarkupSafe = "^2.0.1"
mccabe = "^0.6.1"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
nodeenv = "^1.6.0"
packaging = "^21.0"
pathspec = "^0.9.0"
pbr = "^5.6.0"
pep8-naming = "^0.12.1"
platformdirs = "^2.4.0"
pluggy = "^1.0.0"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"
py = "^1.10.0"
pycodestyle = "^2.7.0"
pydocstyle = "^6.1.1"
pyflakes = "^2.3.1"
Pygments = "^2.10.0"
pyparsing = "^2.4.7"
pytest = "^6.2.5"
pytz = "^2021.1"
PyYAML = "^5.4.1"
regex = "^2021.9.24"
reorder-python-imports = "^2.6.0"
requests = "^2.26.0"
restructuredtext-lint = "^1.3.2"
"ruamel.yaml" = "^0.17.16"
"ruamel.yaml.clib" = "^0.2.6"
safety = "^1.10.3"
six = "^1.16.0"
smmap = "^4.0.0"
snowballstemmer = "^2.1.0"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^3.0.1"
sphinxcontrib-applehelp = "^1.0.2"
sphinxcontrib-devhelp = "^1.0.2"
sphinxcontrib-htmlhelp = "^2.0.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.3"
sphinxcontrib-serializinghtml = "^1.1.5"
stevedore = "^3.4.0"
toml = "^0.10.2"
tornado = "^6.1"
typed-ast = "^1.4.3"
typeguard = "^2.12.1"
typing-extensions = "^3.10.0"
urllib3 = "^1.26.7"
virtualenv = "^20.8.1"
xdoctest = "^0.15.9"
black = "^21.9b0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.9b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.poetry.scripts]
dogdetect = "dogdetect.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dogdetect"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
